# python-package-template

./: .flake8  .pre-commit-config.yaml  .pylintrc  .pypirc  .templateversionrc  LICENSE  MANIFEST.in  README.md  SUPPORT.md  black.toml  noxfile.py  pyproject.toml  requirements.test.txt  setup.py  tox.ini  ws.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  template-sync.yml
.github/workflow/: ossar-analysis.yml  pypi-publish.yml  python-black.yml
.github/workflows/: CI.yml  attack-black.yml  auto-black.yml  auto-version.yml  black.yml  black_2.yml  build.yml  main.yml  mypy.yml  on-push-create-release.yml  on-release-pypi-publish.yml  package-build.yml  proto-pr.yml  publish.yml  pull-request-2.yml  pull-request.yml  pylint.yml  pypi-publish.yml  pypi-test-publish.yml  pyright.yml  pytest.yml  release.yml  sched-actions-update.yml  schedule-update-actions.yml  sphinx.yml  template-sync.yml  testing.yml  twine-test.yml  twine.yml
ai-python-package/: hello_world.py
docs/: conf.py  devcontainer.md  developer.md  index.rst  modules.rst  pre-commit-config.md  pylint.md  pyproject.md  python_package.hello_world.rst  python_package.rst  requirements.txt  vscode.md  workflows.md
src/: README.md
src/ai_python_package/: __init__.py  hello_world.py
src/python_package/: __init__.py  hello_world.py
tests/: conftest.py  test_methods.py
